--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
   <title>ARA Mehndi Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
+    <!-- WhatsApp Floating Button -->
+<a href="https://wa.me/916200165825?text=Hello%20ARA%20Mehndi%20Studio,%20I%20want%20to%20book%20mehndi%20service"
+   target="_blank"
+   style="
+   position: fixed;
+   bottom: 20px;
+   right: 20px;
+   background: #25D366;
+   color: white;
+   padding: 14px 18px;
+   border-radius: 50px;
+   text-decoration: none;
+   font-weight: bold;
+   box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+   ">
+   WhatsApp
+</a>
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
