--- a/index.html
+++ b/index.html
@@ -53,70 +53,31 @@
       font-size: 14px;
     }
 
-    /* WhatsApp Floating Button */
+    /* Floating BOOK NOW button above WhatsApp */
+    .booknow-float {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      background: #3b5d50;
+      color: white;
+      padding: 10px 18px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      z-index: 9999;
+      font-size: 15px;
+    }
+
+    /* Floating WhatsApp button (big icon) */
     .whatsapp-float {
       position: fixed;
       bottom: 20px;
       right: 20px;
       background: #25D366;
       color: white;
-      padding: 14px 18px;
-      border-radius: 50px;
+      padding: 20px 22px;
+      border-radius: 50%;
       text-decoration: none;
       font-weight: bold;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      z-index: 9999;
-    }
-    .whatsapp-float:hover {
-      background: #1ebd5a;
-    }
-  </style>
-
-</head>
-<body>
-
-<header>
-  <h1>ARA Mehndi Studio</h1>
-  <p>Elegant Mehndi Services for Every Indian Occasion</p>
-  <a class="btn" href="https://forms.gle/sDAeRhgyvuAPohV58" target="_blank">Book Now</a>
-</header>
-
-<section>
-  <h2>Our Services</h2>
-  <div class="packages">
-    <div class="card">
-      <h3>Wedding Functions</h3>
-      <p>Bridal Mehndi, Haldi, Sangeet & Wedding Day packages.</p>
-    </div>
-    <div class="card">
-      <h3>Festival Functions</h3>
-      <p>Karwa Chauth, Teej, Diwali, Eid & more.</p>
-    </div>
-    <div class="card">
-      <h3>Family Occasions</h3>
-      <p>Baby Shower, Godh Bharai, Anniversary, Birthday.</p>
-    </div>
-  </div>
-</section>
-
-<section>
-  <h2>Why Choose Us</h2>
-  <p>
-    Professional mehndi services with hygienic practice and elegant designs.
-    Artist identity is kept private as per client comfort.
-  </p>
-</section>
-
-<footer>
-  © 2026 ARA Mehndi Studio | All Rights Reserved
-</footer>
-
-<!-- WhatsApp Button (HTML) - Correct Position -->
-<a href="https://wa.me/916200165825?text=Hello%20ARA%20Mehndi%20Studio%2C%20I%20want%20to%20book%20a%20mehndi%20service"
-   target="_blank"
-   class="whatsapp-float">
-   WhatsApp
-</a>
-
-</body>
-</html>
+      font-size: 26px
