--- a/index.html
+++ b/index.html
@@ -2,13 +2,146 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Test - ARA Mehndi Studio</title>
+  <title>ARA Mehndi Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body style="background:#faf7f2; font-family:Arial, sans-serif; text-align:center; padding-top:80px;">
 
-  <h1>Website Working ✅</h1>
-  <p>If you can see this, GitHub Pages is fine.</p>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #faf7f2;
+      color: #333;
+    }
+    header {
+      background: #3b5d50;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    h2 {
+      color: #3b5d50;
+    }
+    .packages {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #3b5d50;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    footer {
+      background: #eee;
+      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+    }
+
+    /* Floating BOOK NOW button above WhatsApp */
+    .booknow-float {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      background: #3b5d50;
+      color: white;
+      padding: 10px 18px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      z-index: 9999;
+      font-size: 15px;
+    }
+
+    /* Floating WhatsApp button (big icon) */
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25D366;
+      color: white;
+      padding: 20px 22px;
+      border-radius: 50%;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 26px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      z-index: 9999;
+    }
+
+    .whatsapp-float:hover {
+      background: #1ebd5a;
+    }
+  </style>
+
+</head>
+<body>
+
+<header>
+  <h1>ARA Mehndi Studio</h1>
+  <p>Elegant Mehndi Services for Every Indian Occasion</p>
+  <a class="btn" href="https://forms.gle/sDAeRhgyvuAPohV58" target="_blank">Book Now</a>
+</header>
+
+<section>
+  <h2>Our Services</h2>
+  <div class="packages">
+    <div class="card">
+      <h3>Wedding Functions</h3>
+      <p>Bridal Mehndi, Haldi, Sangeet & Wedding Day packages.</p>
+    </div>
+    <div class="card">
+      <h3>Festival Functions</h3>
+      <p>Karwa Chauth, Teej, Diwali, Eid & more.</p>
+    </div>
+    <div class="card">
+      <h3>Family Occasions</h3>
+      <p>Baby Shower, Godh Bharai, Anniversary, Birthday.</p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Why Choose Us</h2>
+  <p>
+    Professional mehndi services with hygienic practice and elegant designs.
+    Artist identity is kept private as per client comfort.
+  </p>
+</section>
+
+<footer>
+  © 2026 ARA Mehndi Studio | All Rights Reserved
+</footer>
+
+<!-- Floating Book Now Button -->
+<a href="https://forms.gle/sDAeRhgyvuAPohV58"
+   target="_blank"
+   class="booknow-float">
+   Book Now
+</a>
+
+<!-- Floating WhatsApp Button -->
+<a href="https://wa.me/916200165825?text=Hello%20ARA%20Mehndi%20Studio%2C%20I%20want%20to%20book%20a%20mehndi%20service"
+   target="_blank"
+   class="whatsapp-float">
+   💬
+</a>
 
 </body>
 </html>
