--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
       font-size: 14px;
     }
 
-    /* Floating BOOK NOW button above WhatsApp */
+    /* FLOATING BUTTONS */
     .booknow-float {
       position: fixed;
-      bottom: 90px;
+      bottom: 140px;
       right: 20px;
       background: #3b5d50;
       color: white;
@@ -69,24 +69,20 @@
       font-size: 15px;
     }
 
-    /* Floating WhatsApp button (big icon) */
     .whatsapp-float {
       position: fixed;
-      bottom: 20px;
+      bottom: 60px;
       right: 20px;
       background: #25D366;
-      color: white;
-      padding: 20px 22px;
+      padding: 14px;
       border-radius: 50%;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 26px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       z-index: 9999;
     }
 
-    .whatsapp-float:hover {
-      background: #1ebd5a;
+    .whatsapp-float img {
+      width: 36px;
+      height: 36px;
     }
   </style>
 
@@ -126,22 +122,4 @@
 </section>
 
 <footer>
-  © 2026 ARA Mehndi Studio | All Rights Reserved
-</footer>
-
-<!-- Floating Book Now Button -->
-<a href="https://forms.gle/sDAeRhgyvuAPohV58"
-   target="_blank"
-   class="booknow-float">
-   Book Now
-</a>
-
-<!-- Floating WhatsApp Button -->
-<a href="https://wa.me/916200165825?text=Hello%20ARA%20Mehndi%20Studio%2C%20I%20want%20to%20book%20a%20mehndi%20service"
-   target="_blank"
-   class="whatsapp-float">
-   💬
-</a>
-
-</body>
-</html>
+  © 2026 ARA Mehndi Studio | All
