--- a/index.html
+++ b/index.html
@@ -142,17 +142,17 @@
     <div class="card">
       <h3>Bridal Package</h3>
       <p>Full bridal mehndi for hands (front & back) and legs with detailed designs.</p>
-      <p class="price">Starting from ₹3,500</p>
+      <p class="price">Starting from ₹2,599</p>
     </div>
     <div class="card">
       <h3>Festival Package</h3>
       <p>Simple and elegant mehndi for Karwa Chauth, Teej, Diwali, Eid and other festivals.</p>
-      <p class="price">Starting from ₹250 per hand</p>
+      <p class="price">Starting from 199 per hand</p>
     </div>
     <div class="card">
       <h3>Family / Guest Package</h3>
       <p>Mehndi for family members and guests for home functions and parties.</p>
-      <p class="price">Starting from ₹1,500 per function</p>
+      <p class="price">Starting from ₹1,299 per function</p>
     </div>
   </div>
   <p style="margin-top:15px; font-size:14px;">
