--- a/index.html
+++ b/index.html
@@ -162,15 +162,17 @@
 
 <section>
   <h2>Gallery</h2>
-  <p>Some sample mehndi designs for weddings, festivals and family occasions.</p>
+  <p>Our original mehndi designs for weddings, festivals and family occasions.</p>
+
   <div class="gallery">
-    <img src="https://i.imgur.com/1lZZLvJ.jpg" alt="Mehndi Design 1">
-    <img src="https://i.imgur.com/qqEotpx.jpg" alt="Mehndi Design 2">
-    <img src="https://i.imgur.com/PtVJs5N.jpg" alt="Mehndi Design 3">
-    <img src="https://i.imgur.com/ECeRtYz.jpg" alt="Mehndi Design 4">
+    <img src="https://aramehndi.github.io/ara-mehndi-studio/mehndi1.jpg" alt="Bridal Mehndi Design">
+    <img src="https://aramehndi.github.io/ara-mehndi-studio/mehndi2.jpg" alt="Bridal Feet Mehndi">
+    <img src="https://aramehndi.github.io/ara-mehndi-studio/mehndi3.jpg" alt="Festival Mehndi Design">
+    <img src="https://aramehndi.github.io/ara-mehndi-studio/mehndi4.jpg" alt="Diwali Mehndi Design">
+    <img src="https://aramehndi.github.io/ara-mehndi-studio/mehndi5.jpg" alt="Simple Family Mehndi Design">
   </div>
-  <!-- NOTE: Baad me in image URLs ko apne original photos se replace kar sakte ho -->
 </section>
+
 
 <section>
   <h2>Why Choose Us</h2>
