--- a/index.html
+++ b/index.html
@@ -2,45 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ARA Mehndi Studio</title>
+  <title>ARA Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body style="background:#faf7f2; font-family:Arial, sans-serif; text-align:center; padding-top:80px;">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #faf7f2;
-      color: #333;
-    }
-    header {
-      background: #3b5d50;
-      color: white;
-      padding: 30px 20px;
-      text-align: center;
-    }
-    section {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    h2 {
-      color: #3b5d50;
-      margin-bottom: 20px;
-    }
-    .packages {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-    .card {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
-      background: #3b5d50;
-      color:
+  <h1>ARA Mehndi Studio – Test Page ✅</h1>
+  <p>Agar ye text dikh raha hai to website sahi chal rahi hai.</p>
+
+</body>
+</html>
