--- a/index.html
+++ b/index.html
@@ -2,13 +2,211 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ARA Test</title>
+  <title>ARA Mehndi Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body style="background:#faf7f2; font-family:Arial, sans-serif; text-align:center; padding-top:80px;">
 
-  <h1>ARA Mehndi Studio – Test Page ✅</h1>
-  <p>Agar ye text dikh raha hai to website sahi chal rahi hai.</p>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #faf7f2;
+      color: #333;
+    }
+
+    header {
+      background: #3b5d50;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+
+    section {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #3b5d50;
+      margin-bottom: 20px;
+    }
+
+    .packages {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #3b5d50;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+
+    footer {
+      background: #eee;
+      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+      margin-top: 40px;
+    }
+
+    .price {
+      font-weight: bold;
+      margin-top: 10px;
+      color: #3b5d50;
+    }
+
+    /* Gallery */
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 14px;
+      margin-top: 10px;
+    }
+
+    .gallery img {
+      width: 100%;
+      height: 240px;
+      object-fit: cover;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+
+    /* Floating Buttons */
+    .booknow-float {
+      position: fixed;
+      bottom: 120px;
+      right: 20px;
+      background: #3b5d50;
+      color: white;
+      padding: 10px 18px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      z-index: 9999;
+      font-size: 15px;
+    }
+
+    .whatsapp-float {
+      position: fixed;
+      bottom: 50px;
+      right: 20px;
+      background: #25D366;
+      padding: 12px;
+      border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      z-index: 9999;
+    }
+
+    .whatsapp-float img {
+      width: 32px;
+      height: 32px;
+    }
+  </style>
+
+</head>
+<body>
+
+<header>
+  <h1>ARA Mehndi Studio</h1>
+  <p>Elegant Mehndi Services for Every Indian Occasion</p>
+  <a class="btn" href="https://forms.gle/sDAeRhgyvuAPohV58" target="_blank">Book Now</a>
+</header>
+
+<section>
+  <h2>Our Services</h2>
+  <div class="packages">
+    <div class="card">
+      <h3>Wedding Functions</h3>
+      <p>Bridal Mehndi, Haldi, Sangeet & Wedding Day packages.</p>
+    </div>
+    <div class="card">
+      <h3>Festival Functions</h3>
+      <p>Karwa Chauth, Teej, Diwali, Eid & more.</p>
+    </div>
+    <div class="card">
+      <h3>Family Occasions</h3>
+      <p>Baby Shower, Godh Bharai, Anniversary, Birthday.</p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Packages & Prices</h2>
+  <div class="packages">
+    <div class="card">
+      <h3>Bridal Package</h3>
+      <p>Full bridal mehndi for hands and legs (front + back) with detailed designs.</p>
+      <p class="price">Starting from ₹3,500</p>
+    </div>
+    <div class="card">
+      <h3>Festival Package</h3>
+      <p>Simple & elegant mehndi for Karwa Chauth, Teej, Diwali, Eid and other festivals.</p>
+      <p class="price">Starting from ₹250 per hand</p>
+    </div>
+    <div class="card">
+      <h3>Guest / Family Package</h3>
+      <p>Mehndi for family members and guests for home functions & parties.</p>
+      <p class="price">Starting from ₹1,500 per function</p>
+    </div>
+  </div>
+  <p style="margin-top:15px; font-size:14px;">
+    *Final price depends on design, length and number of guests. Please WhatsApp for exact quotation.
+  </p>
+</section>
+
+<section>
+  <h2>Gallery</h2>
+  <p>Our original mehndi designs for weddings, festivals and family occasions.</p>
+
+  <div class="gallery">
+    <img src="mehndi1.png" alt="Bridal Mehndi Design">
+    <img src="mehndi2.png" alt="Feet Mehndi Design">
+    <img src="mehndi3.png" alt="Festival Mehndi Design">
+    <img src="mehndi4.png" alt="Diwali Mehndi">
+    <img src="mehndi5.png" alt="Family Mehndi Design">
+  </div>
+</section>
+
+<section>
+  <h2>Why Choose Us</h2>
+  <p>
+    Professional mehndi services with hygienic practice and elegant designs.
+    Artist identity is kept private as per client comfort.
+    Home service is available for weddings, festivals and family functions.
+  </p>
+</section>
+
+<footer>
+  © 2026 ARA Mehndi Studio | All Rights Reserved
+</footer>
+
+<!-- Floating Book Now Button -->
+<a href="https://forms.gle/sDAeRhgyvuAPohV58"
+   target="_blank"
+   class="booknow-float">
+   Book Now
+</a>
+
+<!-- Floating WhatsApp Button -->
+<a href="https://wa.me/916200165825?text=Hello%20ARA%20Mehndi%20Studio%2C%20I%20want%20to%20book%20a%20mehndi%20service"
+   target="_blank"
+   class="whatsapp-float">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+</a>
 
 </body>
 </html>
