--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       border-top: 1px solid rgba(0,0,0,0.1);
     }
 
-    /* Floating buttons */
+    /* Floating Buttons */
     .booknow-float {
       position: fixed;
-      bottom: 120px;
+      bottom: 150px;
       right: 20px;
       background: #3b5d50;
       color: white;
@@ -98,9 +98,25 @@
       font-size: 15px;
     }
 
+    .insta-float {
+      position: fixed;
+      bottom: 95px;
+      right: 20px;
+      background: #E1306C;
+      padding: 10px;
+      border-radius: 50%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      z-index: 9999;
+    }
+
+    .insta-float img {
+      width: 32px;
+      height: 32px;
+    }
+
     .whatsapp-float {
       position: fixed;
-      bottom: 50px;
+      bottom: 40px;
       right: 20px;
       background: #25D366;
       padding: 12px;
@@ -189,7 +205,13 @@
   © 2026 ARA Mehndi Studio | All Rights Reserved
 </footer>
 
+<!-- Floating Buttons -->
 <a href="https://forms.gle/sDAeRhgyvuAPohV58" target="_blank" class="booknow-float">Book Now</a>
+
+<a href="https://www.instagram.com/ara_mehndi_studio.01" target="_blank" class="insta-float">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+</a>
+
 <a href="https://wa.me/916200165825?text=Hello%20ARA%20Mehndi%20Studio,%20I%20want%20to%20book%20a%20mehndi%20service" target="_blank" class="whatsapp-float">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg">
 </a>
