--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ARA MEHNDI STUDIO</title>
+
+  <!-- GOOGLE SEARCH CONSOLE VERIFICATION -->
+  <meta name="google-site-verification" content="H4cj3xKG7XTY1owIFaOR3MZBUtjJAw4uKJRBhttdAhQ" />
+
+  <title>ARA Mehndi Studio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
@@ -174,17 +178,17 @@
     <div class="card">
       <h3>Bridal Package</h3>
       <p>Full bridal mehndi for hands and legs (front + back).</p>
-      <p class="price">Starting from ₹2,599</p>
+      <p class="price">Starting from ₹3,500</p>
     </div>
     <div class="card">
       <h3>Festival Package</h3>
       <p>Festival mehndi for Karwa Chauth, Teej, Diwali, Eid etc.</p>
-      <p class="price">₹199 per hand onwards</p>
+      <p class="price">₹250 per hand onwards</p>
     </div>
     <div class="card">
       <h3>Guest / Family Package</h3>
       <p>For family members during weddings and home functions.</p>
-      <p class="price">From ₹1,499 per function</p>
+      <p class="price">From ₹1,500 per function</p>
     </div>
   </div>
 </section>
@@ -194,11 +198,11 @@
   <p>Our original mehndi designs for Weddings, Festivals & Family occasions.</p>
 
   <div class="gallery">
-    <img src="mehndi1.png" alt="Bridal Mehndi Design">
-    <img src="mehndi2.png" alt="Feet Mehndi Design">
-    <img src="mehndi3.png" alt="Festival Mehndi Design">
-    <img src="mehndi4.png" alt="Diwali Mehndi">
-    <img src="mehndi5.png" alt="Family Mehndi Design">
+    <img src="mehndi1.png">
+    <img src="mehndi2.png">
+    <img src="mehndi3.png">
+    <img src="mehndi4.png">
+    <img src="mehndi5.png">
   </div>
 </section>
 
@@ -216,21 +220,13 @@
 </footer>
 
 <!-- Floating Buttons -->
-<a href="https://forms.gle/sDAeRhgyvuAPohV58"
-   target="_blank"
-   class="booknow-float">
-   Book Now
-</a>
+<a href="https://forms.gle/sDAeRhgyvuAPohV58" target="_blank" class="booknow-float">Book Now</a>
 
-<a href="https://www.instagram.com/ara_mehndi_studio.01"
-   target="_blank"
-   class="insta-float">
+<a href="https://www.instagram.com/ara_mehndi_studio.01" target="_blank" class="insta-float">
   <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
 </a>
 
-<a href="https://wa.me/916200165825?text=Hello%20ARA%20Mehndi%20Studio%2C%20I%20want%20to%20book%20a%20mehndi%20service"
-   target="_blank"
-   class="whatsapp-float">
+<a href="https://wa.me/916200165825?text=Hello%20ARA%20Mehndi%20Studio,%20I%20want%20to%20book%20a%20mehndi%20service" target="_blank" class="whatsapp-float">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
 </a>
 
